# review_skill_django

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
api/: apps.py  urls.py
reviewskill/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_bio.py  0003_user_avatar_user_password_task.py
